[package]
name = "githist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
uuid = {version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
time = "0.3.31"
clap = {  version = "4.4.16", features = ["derive"] }
git2 = "0.18.1"
log = { version = "0.4.20", features = [] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
